# kanzispeaker

./: KanziSpeaker-plugin.pptx  README.md
Application/: .gitignore  CMakeLists.txt
Application/src/executable/: CMakeLists.txt
Application/src/executable/src/: kanzispeaker_main.cpp
Application/src/plugin/: CMakeLists.txt
Application/src/plugin/src/: ffmpeg_manager.cpp  ffmpeg_manager.hpp  kanzispeaker.cpp  kanzispeaker.hpp  kanzispeaker.rc  kanzispeaker_module.cpp  kanzispeaker_module.hpp  resource.h
Tool_project/Images/compressed/: Base.png.KZBExport.cache  Button Circle.png.KZBExport.cache  DefaultBackground.png.KZBExport.cache  DefaultCubeMap.dds.KZBExport.cache
Tool_project/Images/cubemaps/mipmaps/compressed/: DefaultCubeMap.dds negX_128x128.png.KZBExport.cache  DefaultCubeMap.dds negX_1x1.png.KZBExport.cache  DefaultCubeMap.dds negX_2x2.png.KZBExport.cache  DefaultCubeMap.dds negX_4x4.png.KZBExport.cache  DefaultCubeMap.dds negX_64x64.png.KZBExport.cache  DefaultCubeMap.dds negX_8x8.png.KZBExport.cache  DefaultCubeMap.dds negY_128x128.png.KZBExport.cache  DefaultCubeMap.dds negY_1x1.png.KZBExport.cache  DefaultCubeMap.dds negY_32x32.png.KZBExport.cache  DefaultCubeMap.dds negY_64x64.png.KZBExport.cache  DefaultCubeMap.dds negY_8x8.png.KZBExport.cache  DefaultCubeMap.dds negZ_128x128.png.KZBExport.cache  DefaultCubeMap.dds negZ_32x32.png.KZBExport.cache  DefaultCubeMap.dds negZ_8x8.png.KZBExport.cache  DefaultCubeMap.dds posX_128x128.png.KZBExport.cache  DefaultCubeMap.dds posX_32x32.png.KZBExport.cache  DefaultCubeMap.dds posY_8x8.png.KZBExport.cache  DefaultCubeMap.dds posZ_128x128.png.KZBExport.cache  DefaultCubeMap.dds posZ_2x2.png.KZBExport.cache  DefaultCubeMap.dds posZ_32x32.png.KZBExport.cache
Tool_project/Images/mipmaps/compressed/: DefaultTextureImage_2x2.png.KZBExport.cache  DefaultTextureImage_4x4.png.KZBExport.cache  DefaultTextureImage_8x8.png.KZBExport.cache
Tool_project/Shaders/: Textured_STMatrix.frag.glsl  Textured_STMatrix.vert.glsl
Tool_project/Temp/: 04fa5c58-fa78-4655-a038-2429f141a8db  071c3281-890c-4298-8a87-ee1b89115280  0dd28ba0-5465-47a0-9575-683409ff019c  125006d7-7703-4eed-b791-b2d817db5db5  13865a45-dac5-4352-8547-91aa5cb67bfd  1bf1cab2-1376-493d-9ced-d3346fea09fd  28cc970f-7cee-4152-b15c-54636f78fc62  28dc4b1a-506b-451e-a27b-73efa5609324  295c652d-6466-4e0d-99f1-28f463cb3c59  443f861d-bea4-4bf3-827b-9798c327b5f1  49bf4c92-aea0-44f1-84ea-56e9ad70ae91  54f0bec5-1872-4492-a03c-f8c6e4591d3b  5dd13955-59d1-44e2-85dc-0e25992013d1  5df087ad-6af2-4c96-8f3b-00116f972883  6451d5fa-86f0-42e3-8b5f-c670acf063c1  6ae9d033-bfc4-4fc7-8a29-2d021273794f  76028a57-a170-4610-8145-a80c5594af42  774a04fd-db18-47dc-957c-e7654c6c1011  7b35389c-7151-454e-9335-9efc7071448e  7e1e01df-8e14-4e9e-9d2b-34302a196b14  7fd46c33-58e6-4a75-9fcd-1f569e82bf68  7fdcd75b-9cb0-4328-ad19-5986eef32f99  8077011f-b75b-4555-a108-963aacf4d78a  8832c171-2e9d-47ae-8f8f-7e1fc81ce3c2  97c2ea08-923e-4eda-a0db-11c439aef750  9ea5cbf3-ae36-4920-95a1-f0e55d299f49  ac327f0e-a4d7-40c4-9d55-142b872ee0a3  b066ff0c-f6ad-45eb-b14a-897d14d5ac92  c28f757b-bb2b-43ed-87c7-f5a6c77963ca  d034d997-8dc3-4815-bd7c-7533e6891f57  d2d684a7-5452-4d6a-be23-622937764549  eb90fa0a-c4b8-4639-8bb2-b368b70488ed  eec6f90b-add2-4f80-a36c-46703873f247  f1de85e6-447b-47ad-8481-a68ea718cf1f  f580481e-f396-4d5f-af47-6d02f1092995  f589d233-729d-42cd-afe3-abeda38311b7
